[gd_scene load_steps=2 format=3 uid="uid://hud123"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="LivesLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 24
text = "LIVES: 3"

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 400.0
offset_top = 20.0
offset_right = 680.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 24
text = "SCORE: 0"

[node name="LevelLabel" type="Label" parent="."]
offset_left = 800.0
offset_top = 20.0
offset_right = 1060.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 24
text = "LEVEL: 1"

